--- a/src/components/reusable/queryBuilder/queryBuilderRule.scss
+++ b/src/components/reusable/queryBuilder/queryBuilderRule.scss
@@ -8,7 +8,7 @@
   display: flex;
   align-items: flex-start;
   gap: 8px;
-  padding: 24px 0;
+  padding: 24px 0 0;
 
   &--disabled {
     opacity: 0.9;
